@@ -72,6 +72,27 @@
 							</arguments>
 						</configuration>
 					</execution>
+					<execution>
+						<!-- run with mvn clean compile exec:exec@ChatGPT -->
+						<id>ChatGPT</id>
+						<goals>
+							<!-- we cannot use the java goal due to the requirement for \-\-add-opens -->
+							<goal>exec</goal>
+						</goals>
+						<configuration>
+							<executable>java</executable>
+							<arguments>
+								<!-- add-exports=java.desktop/sun.awt.windows=ALL-UNNAMED -->
+								<argument>--add-opens</argument>
+								<argument>java.desktop/sun.awt.windows=ALL-UNNAMED</argument>
+								<argument>-classpath</argument>
+								<!-- automatically creates the classpath using all project dependencies,
+									 also adding the project build directory -->
+								<classpath/>
+								<argument>com.sscce.tmp.ChatGPT</argument>
+							</arguments>
+						</configuration>
+					</execution>
 				</executions>
 				
 			</plugin>
